manifests/apps/discord/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: discord
  namespace: apps
  labels:
    app: discord
spec:
  serviceName: discord
  replicas: 1
  selector:
    matchLabels:
      app: discord
  template:
    metadata:
      labels:
        app: discord
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: discord
          image: kasmweb/discord:1.18.0@sha256:1c3e34a38f34aec62ca09c2ccee4e4269236bc30b14be569d75680eada5d3c0a
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: discord-config
              mountPath: /home/kasm-user
          ports:
            - containerPort: 6901
  volumeClaimTemplates:
    - metadata:
        name: discord-config
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 2Gi
        storageClassName: longhorn
