manifests/apps/discord/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discord
  namespace: apps
spec:
  selector:
    app: discord
  ports:
    - name: http
      port: 6901
      targetPort: 6901
